@@ -71,7 +71,7 @@ int MAIN(int, char **);
 int MAIN(int argc, char **argv)
 	{
 	int i,ret=0;
-	int cflags=0,version=0,date=0,options=0,platform=0;
+	int cflags=0,version=0,date=0,options=0,platform=0,dir=0;
 
 	apps_startup();
 
@@ -92,8 +92,10 @@ int MAIN(int argc, char **argv)
 			options=1;
 		else if (strcmp(argv[i],"-p") == 0)
 			platform=1;
+		else if (strcmp(argv[i],"-d") == 0)
+			dir=1;
 		else if (strcmp(argv[i],"-a") == 0)
-			date=version=cflags=options=platform=1;
+			date=version=cflags=options=platform=dir=1;
 		else
 			{
 			BIO_printf(bio_err,"usage:version -[avbofp]\n");
@@ -127,6 +129,7 @@ int MAIN(int argc, char **argv)
 		printf("\n");
 		}
 	if (cflags)  printf("%s\n",SSLeay_version(SSLEAY_CFLAGS));
+	if (dir)  printf("%s\n",SSLeay_version(SSLEAY_DIR));
 end:
 	EXIT(ret);
 	}
