@@ -100,6 +100,14 @@ const char *SSLeay_version(int t)
 		return("platform: information not available");
 #endif
 		}
+	if (t == SSLEAY_DIR)
+		{
+#ifdef OPENSSLDIR
+		return "OPENSSLDIR: \"" OPENSSLDIR "\"";
+#else
+		return "OPENSSLDIR: N/A";
+#endif
+		}
 	return("not available");
 	}
 
